figured out spacing issue with tictactoe

--- a/tictactoe/styles.css
+++ b/tictactoe/styles.css
@@ -26,8 +26,8 @@ h1 {
 #board {
     background-color: dimgray;
     display: flex;
-    justify-content: space-evenly;
-    width: 48%;
+    justify-content: space-around;
+    width: 33%;
     height: 100%;
     flex-wrap: wrap;
     border-radius: 10px;
@@ -37,12 +37,11 @@ h1 {
 .tile {
     background-color: white;
     width: 31%;
-    height: 29%;
-    margin: 8px;
+    height: 31%;
+    margin: auto;
     color: blue;
     font-size: 600%;
     text-align: center;
-    border-radius: 100px;
 }
 
 #playbtn {
